<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mio</string>
    <string name="termostatabaglaniyor">Bağlanıyor…</string>
    <string name="okay">Tamam</string>
    <string name="degree">°</string>
    <string name="menu_home">Ana Sayfa</string>
    <string name="menu_program">Program</string>
    <string name="miologo">mioLogo</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Şifre</string>
    <string name="login">GİRİŞ</string>
    <string name="register">KAYIT</string>
    <string name="kaydol">KAYDOL</string>
    <string name="sifre_tekrar">Şifre Tekrar</string>
    <string name="facebook_app_id">1514066735436427</string>
    <string name="fb_login_protocol_scheme">fb1514066735436427</string>
    <string name="ssid_title">Kablosuz ağ adı: </string>
    <string name="bssid_title">Bağlantı durumu: </string>
    <string name="confirm">Onayla</string>
    <string name="wifi_5g_message">Cihaz 5G kablosuz desteklemiyor, lütfen bağlanılan kablosuz ağın 2.4G olduğundan emin olun.</string>
    <string name="no_wifi_connection">Kablosuz ağ yok</string>
    <string name="configuring_message">Mio kablosuz ağ yapılandırması yaparken lütfen bekleyin…</string>
    <string name="configure_wifi_change_message">Kablosuz ağ bağlantısı kesildi ya da ağ değiştirildi.</string>
    <string name="configure_result_failed">Bağlantı kurulamadı.</string>
    <string name="configure_result_failed_port">İşlem tamamlanamadı, port başka bir cihaz tarafından kullanılabilir.</string>
    <string name="configure_result_success">Bağlantı kuruldu.</string>
    <string name="configure_result_success_item"> Termostat bağlandı IP = %2$s</string>
    <string name="Signout">ÇIKIŞ</string>
    <string name="configure_device">MIO\'yu ayarla</string>
    <string name="termostata_ba_lan_yor">Termostata bağlanıyor…</string>

    <string name="mainMenu">Ana menü</string>
    <string name="program">Programlama</string>
    <string name="thermoSettings">Termostat Ayarları</string>
    <string name="notifications">Bildirimler</string>
    <string name="languageSettings">Dil Ayarları</string>
    <string name="logout">Çıkış Yap</string>
    <string name="Devices">Termostatlar</string>
    <string name="Delete">Sil</string>
    <string name="users">Kullanıcılar</string>
    <string name="pazartesi">Pzt</string>
    <string name="Sali">S</string>
    <string name="Carsamba">Ç</string>
    <string name="Perşembe">P</string>
    <string name="Cuma">C</string>
    <string name="Cumartesi">Cm</string>
    <string name="Pazar">Pz</string>
    <string name="Save">KAYDET</string>
    <string name="devices">Cihazlar</string>
    <string name="device_name">Cihaz Adı</string>
    <string name="add_prog">Program Ekle</string>
    <string name="calibration">Kalibrasyon</string>
    <string name="accuracy">Hassasiyet</string>
    <string name="ledtime">LED Süresi</string>
    <string name="devicesettings">Cihaz Ayarları</string>
    <string name="add_program">Program Ekle</string>
    <string name="save">Kaydet</string>
    <string name="Users">Kullanıcılar</string>
    <string name="add_user">Kullanıcı Ekle</string>
    <string name="please_add_device">Lüften bir cihaz ekleyiniz/seçiniz.</string>
    <string name="sign_with_fb">Facebook ile giriş yapın</string>
    <string name="connecting">Bağlanıyor…</string>
    <string name="cancel">İPTAL</string>
    <string name="name">İsim</string>
    <string name="address" tools:ignore="Typos">Adres</string>
    <string name="email_exists">Bu email adresi zaten kayıtlı.</string>
    <string name="invalid_email">Lütfen geçerli bir email adresi giriniz.</string>
    <string name="plz_enter_pass">Lütfen şifrenizi giriniz</string>
    <string name="passwords_doesnt_match">Şifreler Uyuşmuyor</string>
    <string name="fill_name_field">Lütfen isim alanını doldurunuz.</string>
    <string name="fill_address_field" tools:ignore="Typos">Lütfen adres alanını doldurunuz.</string>
    <string name="thermostat_name">Termostat Adı</string>
    <string name="nav_header_desc">nav_header_description</string>
    <string name="location_disable_message">Konum servisi devre dışı.</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="delete_all_notify">Tüm Bildirimleri Sil</string>
    <string name="notification">Bildirimler:</string>
    <string name="invalidEmail">Lütfen geçerli bir mail adresi giriniz.</string>
    <string name="userOrPassWrong">Şifre ya da kullanıcı adı hatalı.</string>
    <string name="unableToConnect">Sunucu bağlantısı kurulamadı!, Lütfen internete bağlandıktan sonra uygulamayı başlatın. Sorun devam ederse üreticiniz ile iletişime geçiniz.</string>
    <string name="back">Geri</string>
    <string name="title_activity_add_device">AddDeviceActivity</string>
    <string name="title_activity_thermo_name_first_use">ThermoNameFirstUseActivity</string>
    <string name="title_activity_invite_code">InviteCodeActivity</string>
</resources>
