<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMio"
    tools:context=".LoginActivity"
    android:id="@+id/layout_activity_login">

    <ImageView
        android:id="@+id/mioLogo"
        android:layout_width="245dp"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/miologo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/miologo" />

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mioLogo"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_user"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/etRegPass"
        style="@style/Animation.AppCompat.Dialog"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegEmail" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="102dp"
        android:layout_height="62dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:drawableEnd="@android:drawable/ic_lock_lock"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegPass" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="102dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/custom_button"
        android:drawableEnd="@android:drawable/ic_input_add"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegPass" />


    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/buttonFacebookLogin"
        android:layout_width="244dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_facebook"
        android:text="@string/sign_with_fb"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#F44336"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <TextView
        android:id="@+id/tvLoginConnecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/connecting"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginProgressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>